[metadata]
# replace with your username:
name = youtube_downloader_website-s18k
version = 0.0.1
author = Shreyas Kamath
author_email = shreyaskamath18@gmail.com
description = A python package to download youtube videos in highest resolution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s18k/youtube-downloader-website
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = youtube downloader website
packages = find:
python_requires = >=3.6

[options.packages.find]
where = youtube downloader website